fix image visible, closes #36

--- a/app/sass/blocks/scroll-item.sass
+++ b/app/sass/blocks/scroll-item.sass
@@ -324,7 +324,7 @@
 		margin: -30px 0 0
 
 	&__logo-section
-		width: 200px
+		max-width: 200px
 		margin: 1.17em auto
 
 	&__logo-image
@@ -338,6 +338,10 @@
 		padding: 0 1em 1em 1em
 	+phones
 		display: block
+	&_layout-6
+		flex-direction: column
+		> div
+			padding: 0
 
 
 .no-pseudo
