--- a/app/sass/templates.sass
+++ b/app/sass/templates.sass
@@ -756,7 +756,7 @@
 		margin: -30px 0 0
 
 	&__logo-section
-		width: 200px
+		max-width: 200px
 		margin: 1.17em auto
 
 	&__logo-image
@@ -770,6 +770,10 @@
 		padding: 0 1em 1em 1em
 	+phones
 		display: block
+	&_layout-6
+		flex-direction: column
+		> div
+			padding: 0
 
 
 .no-pseudo
